Fixed some readability issues

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -13,8 +13,8 @@
     --text-action: light-dark(#f7fafc, #f7fafc);
 
     /* Primary Brand Colors (Blues) */
-    --color-primary: light-dark(#3182ce, #2b6cb0);
-    --color-primary-dark: light-dark(#2b6cb0, #63b3ed);
+    --color-primary: light-dark(#51a2ee, #1b5ca0);
+    --color-primary-dark: light-dark(#4b8cd0, #3383bd);
     /* Unified #386ca1 and #2b6cb0 */
     --color-primary-bg: light-dark(#ebf8ff, #253245);
     --color-primary-border: light-dark(#90cdf4, #2b6cb0);
@@ -26,7 +26,7 @@
 
     /* Danger/Error Colors (Reds) */
     --color-danger: light-dark(#e53e3e, #e53e3e);
-    --color-danger-dark: light-dark(#c53030, #fc8181);
+    --color-danger-dark: light-dark(#c53030, #cf5454);
     --color-danger-bg: light-dark(#fff5f5, #742a2a);
     --color-danger-border: light-dark(#feb2b2, #e53e3e);
 
